--- a/SmartGel/Info.plist
+++ b/SmartGel/Info.plist
@@ -20,6 +20,10 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>App wants to use your location.</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>App wants to use your location.</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
