--- a/SmartGel/Info.plist
+++ b/SmartGel/Info.plist
@@ -20,6 +20,8 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSCameraUsageDescription</key>
+	<string>$(PRODUCT_NAME) uses camera</string>
 	<key>NSLocationAlwaysUsageDescription</key>
 	<string>App wants to use your location.</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
