--- a/SmartGel/Info.plist
+++ b/SmartGel/Info.plist
@@ -33,6 +33,8 @@
 	<string>App wants to use your location.</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>App wants to use your location.</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>$(PRODUCT_NAME) access photo libarary</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
