--- a/SmartGel/Info.plist
+++ b/SmartGel/Info.plist
@@ -17,7 +17,7 @@
 	<key>CFBundleShortVersionString</key>
 	<string>1.0</string>
 	<key>CFBundleVersion</key>
-	<string>17</string>
+	<string>18</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSAppTransportSecurity</key>
@@ -33,6 +33,8 @@
 	<string>App wants to use your location.</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>App wants to use your location.</string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>$(PRODUCT_NAME) add photos</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>$(PRODUCT_NAME) access photo libarary</string>
 	<key>UILaunchStoryboardName</key>
